Bug 1248308 - Fix dom/media non-unified build errors - r=jya